card images not visible issue resolved

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -410,8 +410,7 @@ p {
 }
 .card img {
   width: 100%;
-  height: 0;
-  padding-bottom: 62.5%; /* 16:10 ratio */
+  height: 250px;
   object-fit: cover;
 }
 .card__body {
@@ -433,8 +432,7 @@ p {
 }
 .trainers .coach img {
   width: 100%;
-  height: 0;
-  padding-bottom: 100%; /* 1:1 ratio */
+  height: 300px;
   object-fit: cover;
   border-radius: 12px;
   margin-bottom: 10px;
@@ -720,8 +718,7 @@ p {
 
 .facility-card img {
   width: 100%;
-  height: 0;
-  padding-bottom: 62.5%; /* 16:10 ratio */
+  height: 300px;
   object-fit: cover;
 }
 
